--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap');
+@font-face {
+    font-family: "Inter";
+    src: url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap');
+  }
 
 /* All main-page and normalize */
 @import url("./vendor/normalize.css");
