--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,7 @@
-@font-face {
-    font-family: "Inter";
-    src: url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap');
-  }
 
 /* All main-page and normalize */
 @import url("./vendor/normalize.css");
+@import url('./fonts/fonts.css');
 @import url("./blocks/main-page/main-page.css");
 
 @import url("./blocks/header/header.css");
