--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,27 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap');
-
 @font-face {
     font-family: "Inter";
-    src: url("./Inter/Inter-Regular.ttf") format("ttf");
+    src: local("Inter Regular");
+    src: url("./Inter/Inter-Regular.ttf") format("truetype");
     font-weight: 400;
 }
 
 @font-face {
-font-family: "Inter";
-src: url("./Inter/Inter-Medium.ttf") format("ttf");
-font-weight: 500;
+    font-family: "Inter";
+    src: local("Inter Medium");
+    src: url("./Inter/Inter-Medium.ttf") format("truetype");
+    font-weight: 500;
 }
 
 @font-face {
-font-family: "Inter";
-src: url("./Inter/Inter-Bold.ttf") format("ttf");
-font-weight: 700;
+    font-family: "Inter";
+    src: local("Inter Bold");
+    src: url("./Inter/Inter-Bold.ttf") format("truetype");
+    font-weight: 700;
 }
 
 @font-face {
-font-family: "Inter";
-src: url("./Inter/Inter-Black.ttf") format("ttf");
-font-weight: 900;
+    font-family: "Inter";
+    src: local("Inter Black");
+    src: url("./Inter/Inter-Black.ttf") format("truetype");
+    font-weight: 900;
 }
 
 
